--- a/Rates.html
+++ b/Rates.html
@@ -103,10 +103,10 @@
                     </div>
                     <div id="grate">
                         <div id="sell1">
-                            <p id="rate">Fine Silver : ₹<span id="DFSil"></span></p>
+                            <p id="rate">Fine Silver : <span id="DFSil"></span></p>
                         </div>
                         <div id="sell1">
-                            <p id="rate">Mod : ₹<span id="DSilmod"></span></p>
+                            <p id="rate">Mod : <span id="DSilmod"></span></p>
                         </div>
                     </div>
                 </div>
